--- a/toc.yaml
+++ b/toc.yaml
@@ -4,14 +4,14 @@
 ---
 toc:
   properties:
-    subcollection: Db2whc
+    subcollection: db2wh-saas
     service-name: dashdb
     category: database
     audience: service
-    href: /docs/Db2whc?topic=Db2whc-getting-started
+    href: /docs/db2wh-saas?topic=Db2whc-getting-started
     console-page: /catalog/services/db2-warehouse
     product-page: https://www.ibm.com/cloud/db2-warehouse-on-cloud
-    path: Db2whc
+    path: db2wh-saas
     label: Db2 Warehouse as a Service
 #  List your getting started tutorial (getting-started.md) as the first item in the Get started nav group. See https://test.cloud.ibm.com/docs/writing?topic=writing-navigation for more details on the toc design.
   entries:
