--- a/toc.yaml
+++ b/toc.yaml
@@ -82,8 +82,12 @@ toc:
       - topicgroup:
           label: Upgrade
           topics: 
-          - migr_gen2_gen3.md
-          - migr_faq.md 
+          - ibm_driven_upgrade.md
+          - topicgroup:
+              label: Upgrade via Self Service Upgrade Tool
+              topics:
+              - migr_gen2_gen3.md
+              - migr_faq.md 
       - db2-database-assistant.md
       - communities.md
       - link:
