--- a/toc.yaml
+++ b/toc.yaml
@@ -1,7 +1,3 @@
-#  Name your file `toc.yaml`
-#  Make sure you include all nav file coding requirements, as defined in https://test.cloud.ibm.com/docs/writing?topic=writing-code-nav
-#  Anything with a fully qualified URL with `http` or `https` will get an external link icon added to the nav entry
----
 toc:
   properties:
     subcollection: db2wh-saas
@@ -11,12 +7,11 @@ toc:
     href: /docs/db2wh-saas?topic=db2wh-saas-getting-started
     path: db2wh-saas
     label: Db2 Warehouse as a Service
-#  List your getting started tutorial (getting-started.md) as the first item in the Get started nav group. See https://test.cloud.ibm.com/docs/writing?topic=writing-navigation for more details on the toc design.
   entries:
   - navgroup:
       id: learn
       topics:
-      -  about.md
+      - about.md
       - getting-started.md
       - topicgroup:
           label: Connecting
@@ -31,7 +26,7 @@ toc:
           - connecting/connect_programmatically.md
           - connecting/connect_ibm_tools.md
           - connecting/connect_3rd_party_tools.md
-          - connecting/rest_api.md 
+          - connecting/rest_api.md
       - topicgroup:
           label: Loading your data
           topics:
@@ -49,7 +44,7 @@ toc:
           label: Administration
           topics:
           - interfaces.md
-          - db_design.md 
+          - db_design.md
           - advanced_admin.md
           - flex_scaling.md
           - pauseandresume.md
@@ -64,7 +59,7 @@ toc:
           - federation.md
           - migrate_stand.md
           - logical_schema.md
-          - command_syntax.md 
+          - command_syntax.md
       - topicgroup:
           label: Security
           topics:
@@ -81,36 +76,34 @@ toc:
           - accesscont.md
       - topicgroup:
           label: Upgrade
-          topics: 
+          topics:
           - ibm_driven_upgrade.md
           - migr_gen2_gen3.md
           - migr_faq.md
       - db2-database-assistant.md
       - communities.md
       - link:
-              label: What's new
-              href: https://www.ibm.com/support/pages/whats-new-ibm-db2-warehouse-cloud
+          label: What's new
+          href: https://www.ibm.com/support/pages/whats-new-ibm-db2-warehouse-cloud
   - navgroup:
       id: howto
       topics:
       - provision.md
       - link:
-              label: "IBM Demos: Tutorials, videos, and hands-on labs"
-              href: https://www.ibm.com/demos/collection/IBM-Db2-Warehouse-on-Cloud/
-#  Links to your REST API docs should be included in the Reference navigation group. For details on publishing API docs, see https://test.cloud.ibm.com/docs/api-docs.
-#  Links to your command line reference docs should be included in the Reference navigation group.
+          label: 'IBM Demos: Tutorials, videos, and hands-on labs'
+          href: https://www.ibm.com/demos/collection/IBM-Db2-Warehouse-on-Cloud/
   - navgroup:
       id: reference
       topics:
       - link:
-              label: Database management API
-              href: https://cloud.ibm.com/apidocs/db2-warehouse-on-cloud/db2-warehouse-on-cloud-v5
+          label: Database management API
+          href: https://cloud.ibm.com/apidocs/db2-warehouse-on-cloud/db2-warehouse-on-cloud-v5
       - link:
-              label: SQL reference
-              href: https://www.ibm.com/docs/en/db2woc?topic=reference-sql
+          label: SQL reference
+          href: https://www.ibm.com/docs/en/db2woc?topic=reference-sql
       - link:
-              label: Knowledge Center
-              href: https://www.ibm.com/docs/en/db2woc
+          label: Knowledge Center
+          href: https://www.ibm.com/docs/en/db2woc
   - navgroup:
       id: help
       topics:
